@@ -755,3 +755,52 @@ Stephan
 -------------------------- It can be done! ---------------------------------
    Please email me as schulz@informatik.tu-muenchen.de (Stephan Schulz)
 ----------------------------------------------------------------------------
+
+This is the announcement for version 0.91 of E.
+-----------------------------------------------
+
+comp.os.linux.announce
+gnu.announce
+comp.ai
+comp.theory,de.sci.informatik.ki
+
+From: schulz@eprover.org (Stephan Schulz)
+Newsgroups: comp.ai
+Subject: E Equational Theorem Prover 0.91 "Kanyam" released
+Summary: Announcement of availability of the E theorem prover.
+Keywords: E, equational theorem proving, ATP
+Followup-To: comp.theory
+
+The E equational theorem prover version 0.91 "Kanyam" has been
+released. 
+
+E is a a purely equational theorem prover for full first order logic
+with equality. It has successfully competed in several CASC
+competitions and is generally considered a friendly and powerful systm
+(as theorem prover go).
+
+The new version has an improved clause normal form converter that will
+work even on very demanding formulas, improved heuristics and search
+behaviour, and comples with the latest TPTP-3 syntax.
+
+E is available as a source distribution for UNIX-variants. It installs
+cleanly under all UNIX variants I could get my hands on: Various
+versions of GNU/Linux for Intel and SPARC, Solaris, HPUX and
+MacOS-X. Users have reported successful builds on a large number of
+other systems, including Windows/Cygwin.
+
+The system is distributed under the GNU General Public License.
+
+You can find the source distribution and additional information at
+http://www.eprover.org
+
+
+Have fun!
+
+
+Stephan
+
+-- 
+-------------------------- It can be done! ---------------------------------
+   Please email me as schulz@informatik.tu-muenchen.de (Stephan Schulz)
+----------------------------------------------------------------------------
