@@ -17,3 +17,9 @@ jm318@cam.ac.uk
 nahor_j@yahoo.com
 paebanks@yahoo.com
 dmahler@gmail.com
+Linus.Tolke@enea.se
+Chr.Walther@informatik.tu-darmstadt.de
+koen@cs.chalmers.se
+pudlak@artax.karlin.mff.cuni.cz
+fuchs@cs.uiowa.edu
+Pascal.Fontaine@loria.fr
