@@ -1823,7 +1823,7 @@ N.~Dershowitz.
 \bibitem[DKS97]{DKS97}
 J.~Denzinger, M.~Kronenburg, and S.~Schulz.
 \newblock {DISCOUNT: A Distributed and Learning Equational Prover}.
-\newblock {\em Journal of Automated Reasoning}, 18(2):189--198, 1997.
+\newblock {\em Journal of Automated Reasoning}, 2(18):189--198, 1997.
 \newblock Special Issue on the CADE 13 ATP System Competition.
 
 \bibitem[DS94a]{DS94a}
@@ -1901,6 +1901,21 @@ S.~Schulz.
 \newblock
   \url{http://www4.informatik.tu-muenchen.de/\-$\sim$schulz/\-WORK/\-eprover.h%
 tml}, 1999.
+
+\bibitem[Sch00]{Schulz:Diss-2000}
+S.~Schulz.
+\newblock {\em {Learning Search Control Knowledge for Equational Deduction}}.
+\newblock Number 230 in DISKI. Akademische Verlagsgesellschaft Aka GmbH Berlin,
+  2000.
+\newblock Ph.D.~Thesis, Fakult{\"a}t f{\"u}r Informatik, Technische
+  Universit{\"a}t M{\"u}nchen.
+
+\bibitem[Sch01]{Schulz:KI-2001}
+S.~Schulz.
+\newblock {Learning Search Control Knowledge for Equational Theorem Proving}.
+\newblock In F.~Baader, G.~Brewka, and T.~Eiter, editors, {\em Proc.\ of the
+  Joint German/Austrian Conference on Artificial Intelligence (KI-2001)},
+  volume 2174 of {\em LNAI}, pages 320--334. Springer, 2001.
 
 \bibitem[Sch02]{Schulz:AICOM-2002}
 S.~Schulz.
