@@ -128,9 +128,9 @@ CFLAGS     = -O6 -fomit-frame-pointer -Wall -Wno-char-subscripts -ansi \
 
 # Version for profiling
 
-CFLAGS     = -O6 -Wall -Wno-char-subscripts -ansi \
-             -I../include $(DEBUGFLAGS) \
-             $(BUILDFLAGS) $(ARCHFLAGS)
+# CFLAGS     = -O6 -Wall -Wno-char-subscripts -ansi \
+#             -I../include $(DEBUGFLAGS) \
+#             $(BUILDFLAGS) $(ARCHFLAGS)
 
 # Version for debugging
 #
